force-app/main/default/objects/tc9_imp__Timesheet_import_batch_size__c/tc9_imp__Timesheet_import_batch_size__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to define the import batch size for each load type for Import Tool v1</description>
    <label>Import Tool Batch Size v1</label>
</CustomObject>