force-app/main/default/objects/tc9_imp__Timesheet_import_batch_size__c/fields/tc9_imp__Pay_Transaction_Import_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Pay_Transaction_Import_Batch_Size__c</fullName>
    <label>NOT IN USE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>