force-app/main/default/objects/tc9_imp__Timesheet_import_batch_size__c/fields/tc9_imp__Timesheet_import_batch_size__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Timesheet_import_batch_size__c</fullName>
    <description>Defines the number of timesheet records imported per batch. If blank, the default is 40.</description>
    <inlineHelpText>Defines the number of timesheet records imported per batch. If blank, the default is 40.</inlineHelpText>
    <label>Timesheet Import Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>